--- a/package.json
+++ b/package.json
@@ -3,11 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@trendmicro/react-buttons": "^1.3.0",
+    "@trendmicro/react-dropdown": "^1.2.3",
     "@trendmicro/react-modal": "^2.1.2",
     "@trendmicro/react-navs": "^0.11.1",
     "@trendmicro/react-table": "^0.9.0",
+    "classnames": "^2.2.6",
     "react": "^16.4.1",
     "react-dom": "^16.4.1",
+    "react-icons": "^2.2.7",
     "react-powerplug": "^1.0.0-rc.1",
     "react-scripts": "1.1.4",
     "recompose": "^0.27.1",
