--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@trendmicro/react-buttons": "^1.3.0",
+    "@trendmicro/react-checkbox": "^3.4.0",
     "@trendmicro/react-dropdown": "^1.2.3",
     "@trendmicro/react-modal": "^2.1.2",
     "@trendmicro/react-navs": "^0.11.2",
